# rnutil

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
docs/: index.rst
rnutil/: __init__.py  rnutil_console.py
rnutil/pkcli/: amazon_music.py  ocr.py  wwoz.py
tests/: import_test.py
tests/pkcli/: ocr_test.py  wwoz_test.py  wwoz_visitors_test.py
tests/pkcli/wwoz_data/: livewire.html  livewire.json  wwoz_google_map.csv
tests/pkcli/wwoz_data/1-overnight.in/: livewire.html
tests/pkcli/wwoz_data/1-overnight.out/: livewire.json  table.txt
tests/pkcli/wwoz_visitors_data/1-visitors.in/: 2026-05-01.html  2026-05-02.html  2026-05-03.html
tests/pkcli/wwoz_visitors_data/1-visitors.out/: table.txt
