[build-system]
requires = ["chronver", "setuptools>=66"]
build-backend = "setuptools.build_meta"

[project]
authors = [
    { name = "RadiaSoft LLC", email = "pip@radiasoft.net" },
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Topic :: Utilities",
]
dependencies = [
    "pykern",
]
description = "some utilities"
dynamic = ["version"]
name = "rnutil"
readme = "README.md"

[project.scripts]
rnutil = "rnutil.rnutil_console:main"

[project.urls]
Homepage = "https://git.radiasoft.org/rnutil"

[tool.setuptools.package-data]
rnutil = ["package_data/**"]

[tool.setuptools.packages.find]
include = ["rnutil*"]
